Standards unit tested and complete, integration tests and in-memory backing store now needed